--- a/FrontEnd/src/EditPatientModal.css
+++ b/FrontEnd/src/EditPatientModal.css
@@ -1,6 +1,33 @@
 .editModal {
-	width: 300px;
+	width: 400px;
 	background-color: whitesmoke;
 	height: 400px;
 	color: black;
+	border-radius: 2%;
+	padding: 20px;
+	position: fixed;
+	z-index: 100;
+	 top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
+.modalParent {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100vw;
+	z-index: 99;
+	background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal label {
+	width: 150px;
+}
+
+.modal .ant-input,
+.modal .ant-picker,
+.modal .ant-select {
+	width: 200px;
 }
